samples/_failures_safe/1761002207_71d9b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de533c71.c: In function ‘main’:
./samples/SAFE/__tmp_de533c71.c:149:5: error: expected identifier or ‘(’ at end of input
  149 |     size_t
      |     ^~~~~~
./samples/SAFE/__tmp_de533c71.c:149:5: error: expected declaration or statement at end of input
